--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://localhost:3306/projectmanagement
-spring.datasource.username=root
+spring.datasource.username=supergiobby
 spring.datasource.password=super_adminsql
 #logging.level.root=WARN
