--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,5 @@ spring.jpa.hibernate.ddl-auto=none
 spring.datasource.url=jdbc:mysql://localhost:3306/projectmanagement
 spring.datasource.username=supergiobby
 spring.datasource.password=super_adminsql
+spring.jpa.properties.hibernate.id.new_generator_mappings=false
 #logging.level.root=WARN
